test/TestPhases/namecheck/invalid/XlocalShadow3.blc
module


ref struct x
extension
    activity x ()()
        var x: int8 = 0
        while true repeat
            var x: int8 = 0 //declaration error
            await true
        end
    end
end
